# darwinia-parachain

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.rs  config.yml  crab-parachain.hex  crab-parachain.json  crab-parachain.wasm  file_header.txt
.github/: purge-large-cache.sh  release-template.md
.github/workflows/: checks.yml  ci.yml  release.yml  staging.yml  test-ci.yml
.maintain/: .example  config.yml  release-template.md
.maintain/docker/: Dockerfile
node/: Cargo.toml
node/res/: darwinia-parachain.json
node/src/: chain_spec.rs  command.rs  service.rs
pallets/parachain-info/: Cargo.toml
pallets/token-dealer/: Cargo.toml
primitives/: Cargo.toml
primitives/src/: lib.rs
res/: crab-parachain.json  crab-redirect.hex  crab-redirect.json  crab-redirect.wasm  darwinia-parachain.json  darwinia-pc2.genesis  darwinia-pc2.json  darwinia-pc2.wasm  pangolin-genesis  pangolin-parachain-alpha.json  pangolin-parachain.json  pangolin-wasm  pangolin.json  pangolin.wasm
res/darwinia-crab-pc2/: darwinia-crab-pc2.genesis
res/darwinia-pc2/: darwinia-pc2.genesis  darwinia-pc2.wasm
rpc/: Cargo.toml
rpc/src/: lib.rs
runtime/: Cargo.toml  build.rs
runtime/common/: Cargo.toml
runtime/common/src/: lib.rs  xcm_config.rs
runtime/common/src/governance/: mock.rs  mod.rs  tests.rs
runtime/common/src/helixbridge/: benchmarking.rs  evm.rs  mock.rs  mod.rs  tests.rs  weight.rs
runtime/common/src/message_router/: barriers.rs  benchmarking.rs  location_conversion.rs  mod.rs  test.rs  weights.rs
runtime/common/src/message_router/mock/: mod.rs  parachain.rs  relay_chain.rs
runtime/common/src/remote_governance/: mock.rs  mod.rs  tests.rs
runtime/common/src/remote_government/: mock.rs  mod.rs  tests.rs
runtime/crab-parachain/: Cargo.toml  build.rs
runtime/crab-parachain/src/: lib.rs  migrations.rs
runtime/crab-parachain/src/bridges_message/: crab.rs  mod.rs
runtime/crab-parachain/src/pallets/: balances.rs  bridge_dispatch.rs  bridge_grandpa.rs  bridge_messages.rs  collator_selection.rs  cumulus_xcm.rs  dmp_queue.rs  fee_market.rs  from_substrate_issuing_.rs  helixbridge.rs  message_router.rs  mod.rs  multisig.rs  parachain_system.rs  polkadot_xcm.rs  proxy.rs  remote_governance.rs  session.rs  sudo.rs  system.rs  timestamp.rs  transaction_payment.rs  utility.rs  xcmp_queue.rs
runtime/crab-parachain/src/weights/: cumulus_pallet_xcmp_queue.rs  extrinsic_weights.rs  frame_system.rs  mod.rs  pallet_balances.rs  pallet_collator_selection.rs  pallet_multisig.rs  pallet_proxy.rs  pallet_timestamp.rs  pallet_utility.rs  rocksdb_weights.rs
runtime/crab-redirect/: Cargo.toml
runtime/crab-redirect/src/: lib.rs
runtime/crab-redirect/src/pallets/: parachain_system.rs  xcmp_queue.rs
runtime/crab-redirect/src/weights/: pallet_utility.rs
runtime/darwinia-parachain/: Cargo.toml  build.rs
runtime/darwinia-parachain/src/: lib.rs
runtime/darwinia-parachain/src/bridges_message/: darwinia.rs  mod.rs
runtime/darwinia-parachain/src/pallets/: balances.rs  bridge_dispatch.rs  bridge_grandpa.rs  bridge_messages.rs  collator_selection.rs  fee_market.rs  helixbridge.rs  message_router.rs  mod.rs  multisig.rs  parachain_info_.rs  parachain_system.rs  polkadot_xcm.rs  proxy.rs  remote_governance.rs  session.rs  system.rs  timestamp.rs  transaction_payment.rs  utility.rs  xcmp_queue.rs
runtime/darwinia-parachain/src/weights/: block_weights.rs  frame_system.rs  pallet_balances.rs  pallet_collator_selection.rs  pallet_multisig.rs  pallet_proxy.rs  pallet_timestamp.rs  pallet_utility.rs  paritydb_weights.rs
runtime/darwinia-redirect/: Cargo.toml
runtime/darwinia-redirect/src/: lib.rs
runtime/darwinia-redirect/src/pallets/: session.rs  transaction_payment.rs
runtime/pangolin-parachain/: Cargo.toml  build.rs
runtime/pangolin-parachain/src/: lib.rs  migrations.rs
runtime/pangolin-parachain/src/bridge_messages/: pangolin.rs
runtime/pangolin-parachain/src/bridges/substrate/: mod.rs  pangolin_messages.rs
runtime/pangolin-parachain/src/bridges_message/: pangolin.rs
runtime/pangolin-parachain/src/pallets/: authorship.rs  balances.rs  bridge_dispatch.rs  bridge_grandpa.rs  bridge_messages.rs  bridge_pangolin_grandpa.rs  collator_selection.rs  dmp_queue.rs  fee_market.rs  from_substrate_issuing_.rs  helixbridge.rs  message_router.rs  mod.rs  multisig.rs  parachain_system.rs  polkadot_xcm.rs  proxy.rs  remote_governance.rs  remote_government.rs  session.rs  solo_to_para.rs  system.rs  timestamp.rs  transaction_payment.rs  utility.rs  xcm_matcher.rs  xcmp_queue.rs
runtime/pangolin-parachain/src/weights/: block_weights.rs  cumulus_pallet_xcmp_queue.rs  extrinsic_weights.rs  frame_system.rs  mod.rs  pallet_balances.rs  pallet_bridge_grandpa.rs  pallet_bridge_messages.rs  pallet_bridge_messages_ext.rs  pallet_collator_selection.rs  pallet_fee_market.rs  pallet_multisig.rs  pallet_proxy.rs  pallet_session.rs  pallet_timestamp.rs  pallet_utility.rs  paritydb_weights.rs  rocksdb_weights.rs
runtime/src/: balances.rs  collective.rs  ethereum_backing.rs  lib.rs  parachain_info_.rs  parachain_system.rs  proxy.rs  relayer_game.rs  system.rs  xcm_handler.rs
runtime/src/pallets/: aura.rs  aura_ext.rs  authorship.rs  balances.rs  collator_selection.rs  cumulus_xcm.rs  dmp_queue.rs  mod.rs  multisig.rs  parachain_system.rs  polkadot_xcm.rs  proxy.rs  randomness_collective_flip.rs  session.rs  sudo.rs  system.rs  timestamp.rs  transaction_payment.rs  utility.rs  xcmp_queue.rs
runtime/src/weights/: mod.rs  pallet_balances.rs
src/: chain_spec.rs  cli.rs  command.rs  main.rs  service.rs
src/chain_spec/: crab_parachain.rs  crab_redirect.rs  darwinia_parachain.rs  darwinia_redirect.rs  mod.rs  pangolin_parachain.rs
src/service/: api.rs  crab_parachain.rs  crab_redirect.rs  darwinia_parachain.rs  darwinia_redirect.rs  executors.rs  mod.rs
tests/: deploy.rs
