[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
build       = "build.rs"
description = "Darwinia Parachain"
edition     = "2018"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "darwinia-parachain"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-parachain"
version     = "5.3.2"

[features]
alpha = ["pangolin-parachain-runtime/alpha"]

try-runtime = [
	# darwinia-network
	"crab-parachain-runtime/try-runtime",
	# paritytech
	"try-runtime-cli",
]

runtime-benchmarks = [
	# darwinia-network
	"pangolin-parachain-runtime/runtime-benchmarks",
	"crab-parachain-runtime/runtime-benchmarks",
	"darwinia-parachain-runtime/runtime-benchmarks",
	# paritytech
	# TODO: https://github.com/paritytech/cumulus/pull/991
	"polkadot-cli/runtime-benchmarks",
	"frame-benchmarking",
]

[dependencies]
# crates.io
array-bytes  = { version = "2.0" }
async-trait  = { version = "0.1" }
clap         = { version = "3.2", features = ["derive"] }
codec        = { package = "parity-scale-codec", version = "3.1" }
futures      = { version = "0.3" }
jsonrpsee    = { version = "0.14", features = ["server"] }
log          = { version = "0.4" }
serde        = { version = "1.0", features = ["derive"] }
tempfile     = { version = "3.3" }

# parachain
crab-parachain-runtime     = { path = "runtime/crab-parachain" }
darwinia-parachain-runtime = { path = "runtime/darwinia-parachain" }
dc-primitives              = { path = "primitives" }
dc-rpc                     = { path = "rpc" }
pangolin-parachain-runtime = { path = "runtime/pangolin-parachain" }

# substrate
frame-benchmarking             = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
frame-benchmarking-cli         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sc-basic-authorship            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sc-chain-spec                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sc-cli                         = { features = ["wasmtime"], git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sc-client-api                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sc-consensus                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sc-executor                    = { features = ["wasmtime"], git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sc-keystore                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sc-network                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sc-rpc                         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sc-service                     = { features = ["wasmtime"], git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sc-sysinfo                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sc-telemetry                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sc-tracing                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sc-transaction-pool            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sp-api                         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sp-block-builder               = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sp-consensus                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sp-consensus-aura              = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sp-core                        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sp-inherents                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sp-io                          = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sp-keystore                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sp-offchain                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sp-runtime                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sp-session                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sp-timestamp                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sp-transaction-pool            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
substrate-frame-rpc-system     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
substrate-prometheus-endpoint  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
try-runtime-cli                = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }

# cumulus
cumulus-client-cli                      = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.26" }
cumulus-client-consensus-aura           = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.26" }
cumulus-client-consensus-common         = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.26" }
cumulus-client-consensus-relay-chain    = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.26" }
cumulus-client-network                  = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.26" }
cumulus-client-service                  = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.26" }
cumulus-primitives-core                 = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.26" }
cumulus-primitives-parachain-inherent   = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.26" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.26" }
cumulus-relay-chain-interface           = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.26" }
cumulus-relay-chain-rpc-interface       = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.26" }

# polkadot
polkadot-cli       = { features = ["rococo-native"], git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.26" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.26" }
polkadot-service   = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.26" }
xcm                = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.26" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
try-runtime-cli              = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }

[workspace]
members = [
	"primitives",
	"rpc",
	"runtime/*",
]
